# aktsp2024

./: README.md  aktsp2024.opam  aktsp2024.opam.locked  dune-project  projects.md
.github/workflows/: ci.yml
src/abseval/: abseval.ml
src/constraint/abseval/: constraint_abseval.ml
src/constraint/grammar/: constraint_grammar.ml
src/crashcourse/: collections.ml  types.ml
src/domain/: dune  envDomain.ml  intDomain.ml  mapDomain.ml  setDomain.ml
src/eval/: common.ml  concrete.ml
src/fixpoint/: fixpoint.ml
src/modelcheck/: checker.ml
src/modelcheck/program/: modelcheck_program.ml
src/regex/: brzozowski.ml  simplify.ml
src/symbolic/: symbolic.ml
src/toyatp/: README.md  magic.ml  sat.ml  smt.ml
src/toylangs/: bool.ml  imp.ml  rnd.ml
src/wp/: wp.ml
test/abseval/: abseval_test.ml
test/constraint/: constraint_test.ml
test/constraint/abseval/: abseval_test.ml
test/constraint/grammar/: grammar_test.ml
test/domain/: intDomain_test.ml
test/eval/: concrete_test.ml
test/fixpoint/: nfa_eps_test.ml
test/regex/: brzozowski_test.ml
test/toyatp/: toyatp_test.ml
